Closed Bug 211380 Opened 23 years ago Closed 23 years ago

[FIX]random already_AddRefed fu could be useful in nsScreen

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: bzbarsky, Assigned: bzbarsky)

Details

Attachments

(1 file)

Attached patch patchSplinter Review
Attachment #126893 - Flags: superreview?(jst)
Attachment #126893 - Flags: review?(jst)
Comment on attachment 126893 [details] [diff] [review] patch r+sr=jst
Attachment #126893 - Flags: superreview?(jst)
Attachment #126893 - Flags: superreview+
Attachment #126893 - Flags: review?(jst)
Attachment #126893 - Flags: review+
Fixed.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Component: DOM: Core → DOM: Core & HTML
QA Contact: desale → general
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: