Random already_AddRefed stuff.  Bug 211380, r+sr=jst